# gamma-budget-backend

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.lint.txt  requirements.testing.txt  sonar-project.properties
.gitlab/merge_request_templates/: template.md
dotenv_files/: .env-example
gamma_budget/: asgi.py  manage.py  pyproject.toml  requirements.txt  settings.py  wsgi.py
gamma_budget/budget/: api_output.py  apps.py  main.py
gamma_budget/budget/admin/: __init__.py  alert.py  category.py  incoming.py  limit.py  revenue.py
gamma_budget/budget/migrations/: 0001_initial.py  0002_create_basic_categories.py  0003_alter_revenue_expiration_date.py  0004_incoming_incoming_date.py  0005_alert_limit.py  0005_alter_incoming_incoming_date.py  0006_alter_incoming_launch_date.py  0006_merge_20240627_2059.py  0007_merge_20240709_2228.py  0008_alter_incoming_incoming_date_and_more.py
gamma_budget/budget/models/: __init__.py  alert.py  incoming.py  installment.py  limit.py  recurring.py  revenue.py
gamma_budget/budget/repositories/: __init__.py  alert.py  categories.py  incoming.py  limit.py  revenue.py
gamma_budget/core/: validators.py
gamma_budget/gamma_budget/: asgi.py  settings.py  urls.py  wsgi.py
gamma_budget/project/: asgi.py  settings.py  testing_settings.py  urls.py  wsgi.py
projekt/: manage.py  requirements.txt
projekt/budget/: api_output.py  apps.py  main.py
projekt/core/: validators.py
projekt/projekt/: asgi.py  settings.py  urls.py
scripts/: run.sh
(+113 files in other folders)
