[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 150
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 150

lint.extend-select = [
    "I",
    "UP",
    "RUF100",
    "E",
    "F",
    "W",
    "B",
    "SIM",
    "N",
    "G",
    "ISC",
    "RUF",
    "B",
    "D101",
    "D106",
    "D2",
    "D3",
    "D400",
    "D402",
    "D403",
    "D407",
    "D408",
    "D412",
    "D419",
    "TCH",
    "TID251",
    "TID253",
    "B006",
]

lint.ignore = [
    "D203",
    "D212",
    "D213",
    "D214",
    "D215",
    "E731",
    "TCH003",
]

lint.extend-per-file-ignores ={"__init__.py"=["F403"], "*/migrations/*"=["D", "F", "RUF"]}


[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projekt.settings"

addopts = "--cov-report html:testing_reports/html/coverage_report_html --cov=projekt -rasl --verbosity=3 -p no:flaky -p no:nose"
log_level = "INFO"
filterwarnings = []
python_files = [
    "test_*.py",
    "example_*.py",
]
pythonpath = [
  "./projekt"
]
testpaths = [
    "tests",
]


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
plugins = []
pretty = true
show_error_codes = true
disable_error_code = [
    "annotation-unchecked",
]
